--- a/src/template.html
+++ b/src/template.html
@@ -31,7 +31,7 @@
 	<!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
-	%sapper.scripts%
+	<!-- %sapper.scripts% -->
 </body>
 
 </html>
