meta and monetisation

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,25 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1.0'>
 	<meta name='theme-color' content='#333333'>
+	<meta name="monetization" content="1Jo6gFjnkXMC2Lt3PbCrSJ9bcbrZLQKnF2" />
+
+	<meta name="image" content="images/logo-icon.svg">
+	<meta itemprop="name" content="markrobson.studio">
+	<meta itemprop="description" content="Online gallery of artist Mark Robson">
+	<meta itemprop="image" content="images/logo-icon.svg">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="markrobson.studio">
+	<meta name="twitter:description" content="The gallery website and art blog of artist Mark Robson">
+	<meta name="twitter:site" content="@roppa_uk">
+	<meta name="twitter:creator" content="@roppa_uk">
+	<meta name="twitter:image:src" content="images/logo-icon.svg">
+	<meta name="og:title" content="markrobson.studio">
+	<meta name="og:description" content="The gallery website and art blog of artist Mark Robson">
+	<meta name="og:image" content="images/logo-icon.svg">
+	<meta name="og:url" content="https://markrobson.studio">
+	<meta name="og:site_name" content="markrobson.studio">
+	<meta name="og:locale" content="en_GB">
+	<meta name="og:type" content="website">
 
 	%sapper.base%
 
