tweaks, fixes, adding some more images

--- a/src/template.html
+++ b/src/template.html
@@ -33,6 +33,24 @@
 	<link rel='manifest' href='manifest.json' crossorigin='use-credentials'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
+	<style>
+		html {
+			height: 100%;
+		}
+
+		body {
+			position: relative;
+		}
+
+		html,
+		body {
+			color: #666666;
+			background-color: white;
+			font-weight: 400;
+			letter-spacing: 0.03rem;
+		}
+	</style>
+
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
