added google tracking. tweaked desructure

--- a/src/template.html
+++ b/src/template.html
@@ -25,6 +25,15 @@
 	<meta name="og:locale" content="en_GB">
 	<meta name="og:type" content="website">
 
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173712018-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'UA-173712018-1');
+	</script>
+
+
 	%sapper.base%
 
 	<link rel='stylesheet' href='css/bootstrap.min.css'>
